# nrs-webapp

./: .gitignore  Cargo.toml  README.md  TEST_GENERATION_SUMMARY.md  TEST_SUMMARY.md  bacon.toml  flake.nix  justfile
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  lint.yml
nrs-webapp/: Cargo.toml
nrs-webapp-core/: Cargo.toml
nrs-webapp-core/src/: lib.rs
nrs-webapp-core/src/data/entry/types/: idtype.rs  mod.rs
nrs-webapp-core/src/legacy_json/: DAH_anime_normalize_bulk.json  factors.rs  math.rs  mod.rs
nrs-webapp-frontend/: Cargo.toml  package.json  pnpm-lock.yaml
nrs-webapp-frontend/src/: lib.rs
nrs-webapp-frontend/src/inline_scripts/: live-reload.js
nrs-webapp-frontend/src/views/: document.rs  error.rs  mod.rs
nrs-webapp-frontend/src/views/components/: footer.rs  link.rs  mod.rs  navbar.rs  toast.rs
nrs-webapp-frontend/src/views/email/: email_verify.rs  mod.rs  password_reset.rs
nrs-webapp-frontend/src/views/icons/: mod.rs
nrs-webapp-frontend/src/views/pages/: home.rs  mod.rs
nrs-webapp-frontend/src/views/pages/auth/: confirm_email.rs  forgot_pass.rs  login.rs  mod.rs  register.rs
nrs-webapp-frontend/src/views/pages/entry/: details.rs  list.rs
nrs-webapp-frontend/static/serve/: alpine.min.js  prism-htmx.js  prism.css  prism.js  theme-controller.js  toast-on-load.js
nrs-webapp-frontend/static/src/: input.css
nrs-webapp-keygen/: Cargo.toml
nrs-webapp-keygen/src/: main.rs
nrs-webapp/sql/dev_initial/: 00-recreate-db.sql  01-create-auth-tables.sql  01-prelude.sql  02-auth-create-app-user-table.sql  02-create-schema.sql  03-auth-create-user-token-table.sql  03-dev-seed.sql  04-auth-create-oauth-table.sql  04-create-schema.sql  05-create-schema.sql
nrs-webapp/src/: config.rs  error.rs  main.rs
nrs-webapp/src/_dev_utils/: dev_db.rs  latest-pj-escape-bulk.json  mod.rs  seed.rs
nrs-webapp/src/auth/: error.rs  mod.rs  session.rs
nrs-webapp/src/crypt/: error.rs  jwt.rs  mod.rs  oauth2.rs  password_hash.rs  session_token.rs  symmetric.rs  token.rs
nrs-webapp/src/extract/: doc_props.rs  mod.rs  with_rejection.rs
nrs-webapp/src/mail/: error.rs  log_mail.rs  mod.rs  resend_mail.rs
nrs-webapp/src/middleware/: mod.rs  mw_req_session.rs  mw_req_stamp.rs  mw_res_map.rs
nrs-webapp/src/model/: error.rs  mod.rs
nrs-webapp/src/model/entity/: id.rs  mod.rs
nrs-webapp/src/model/entry/: alias.rs  mod.rs
nrs-webapp/src/model/oauth_links/: mod.rs
nrs-webapp/src/model/store/: error.rs  mod.rs  primary_store.rs
nrs-webapp/src/model/token/: mod.rs
nrs-webapp/src/model/user/: mod.rs
nrs-webapp/src/routes/: dev.rs  fallback.rs  mod.rs  static_serve.rs
nrs-webapp/src/routes/auth/: confirm_mail.rs  forgot_password.rs  login.rs  logoff.rs  mod.rs  oauth.rs  register.rs
nrs-webapp/src/routes/entry/: mod.rs
nrs-webapp/src/toasts/: mod.rs
nrs-webapp/src/validate/: auth.rs
nrs-webapp/tests/: README.md  sql_schema_validation.rs  test.rs
sqlbindable/: Cargo.toml  README.md
sqlbindable-macros/: Cargo.toml
sqlbindable-macros/src/: lib.rs  utils.rs
sqlbindable/src/: lib.rs
